--- a/quick_example.ipynb
+++ b/quick_example.ipynb
@@ -2,44 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
-   "source": [
-    "import phi\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[4, 1, 3, 2, 4, 2, 0, 3, 0, 3], [1, 0, 4, 1, 0, 0, 2, 3, 3, 1], [4, 0, 1, 0, 2, 0, 0, 0, 4, 4], [4, 4, 3, 4, 2, 3, 1, 0, 2, 2], [0, 2, 1, 0, 1, 0, 2, 4, 3, 3]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "m_random = np.random.randint(5, size=(5, 10)).tolist()\n",
-    "print(m_random)\n",
-    "r = phi.run_phi(m_random, limits=[0,5],keep_missing=True,fast=True,njobs=4,verbose=False,table=False,N=150)"
+    "from agreement_phi import run_phi\n",
+    "import numpy as np"
    ]
   },
   {
@@ -50,15 +20,36 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4, 3, 3, 4, 0, 0, 0, 1, 4, 1], [0, 1, 1, 3, 3, 2, 0, 4, 0, 4], [4, 1, 3, 4, 0, 2, 0, 1, 4, 1], [2, 0, 2, 4, 2, 1, 2, 0, 3, 4], [3, 4, 2, 4, 4, 4, 2, 1, 1, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_random = np.random.randint(5, size=(5, 10)).tolist()\n",
+    "print(m_random)\n",
+    "r = run_phi(m_random, limits=[0,5],keep_missing=True,fast=True,njobs=4,verbose=False,table=False,N=150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "{'agreement': 0.2373787742061858,\n",
-       " 'computation_time': 15.258897066116333,\n",
+       "{'agreement': 0.25316142945890674,\n",
+       " 'computation_time': 2.004441976547241,\n",
        " 'convergence_test': True,\n",
-       " 'interval': array([-0.10873079,  0.44942918])}"
+       " 'interval': array([-0.07708204,  0.44956308])}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
